array.island.Island.scala.error
Compilation error:
Island:4: error: not found: value length
  for (a<- 1 to length(num) ){
                ^