array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveaux:Int =0
  for (a<- 1 to length(num) ){
    if (num(a) < num(a+1)) {
      niveaux=niveaux+1
    }
  }
  return niveaux
}